--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -5,16 +5,17 @@
 }
 
 .about__me {
-    width: 100%;
+    width: 90%;
     aspect-ratio: 1/1;
-    border-radius: 2rem;
+    border-radius: 4rem;
     background: linear-gradient(45deg, transparent, var(--color-primary), transparent);
     display: grid;
     place-items: center;
 }
 
 .about__me-image {
-    border-radius: 2rem;
+    max-width: 90%;
+    border-radius: 50rem;
     overflow: hidden;
     transform: rotate(10deg);
     transition: var(--transition);
